Actualizar store y update para un comportamiento más predecible Ajustar documentacion para enviar json
